prog tp 2 slnode stack position

--- a/Programmation/Programmation 03/TP/TP-02 - Prog/.vscode/tasks.json
+++ b/Programmation/Programmation 03/TP/TP-02 - Prog/.vscode/tasks.json
@@ -17,7 +17,7 @@
         "-lmingw32",
         "-lSDL2main",
         "-lSDL2",
-        "-mwindows"
+        //"-mwindows"
       ],
       "options": {
         "cwd": "C:/msys64/mingw64/bin",
