--- a/Programmation/Programmation 03/TP/TP-03 - Prog/.vscode/settings.json
+++ b/Programmation/Programmation 03/TP/TP-03 - Prog/.vscode/settings.json
@@ -1,6 +1,10 @@
 {
-  "files.associations": {
-    "new": "cpp",
-    "ostream": "cpp"
-  }
+    "files.associations": {
+        "new": "cpp",
+        "ostream": "cpp",
+        "array": "cpp",
+        "deque": "cpp",
+        "vector": "cpp",
+        "string_view": "cpp"
+    }
 }
